syntax = "proto3";

package NAttributes;

import "kernel/attributes/filter/proto/attr_restriction_iterator.proto";

message TAttrRestrictionIteratorsProto {
    repeated TAttrRestrictionIteratorProto Tree = 1;
}
