syntax = "proto3";

package NAttributes;

import "kernel/attributes/restrictions/proto/single_attr_restriction.proto";

message TAttrRestrictionsProto {
    repeated TSingleAttrRestriction Tree = 1;
}
