syntax = "proto3";

package NAttributes;

message TSingleAttrRestriction {
    enum ETreeOperation {
        And = 0;
        Or = 1;
        Leaf = 2;
        AndNot = 3;
    };

    enum ECompareOper {
        cmpEQ = 0;
        cmpLT = 1;
        cmpLE = 2;
        cmpGE = 3;
        cmpGT = 4;
    };

    bytes Left = 1;
    bytes Right = 2;
    repeated uint32 Children = 3;
    ECompareOper CmpOper = 4;
    ETreeOperation TreeOper = 5;

    // document must meet all the required restrictions for `Or` operations with MiscOps and asterisks
    bool Required = 6;
}
